; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_rs6000-tdep.c_find_variant_by_arch.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_rs6000-tdep.c_find_variant_by_arch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.variant = type { i32, i64, i64 }

@variants = common dso_local global %struct.variant* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.variant* (i32, i64)* @find_variant_by_arch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.variant* @find_variant_by_arch(i32 %0, i64 %1) #0 {
  %3 = alloca %struct.variant*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca %struct.variant*, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  %7 = load %struct.variant*, %struct.variant** @variants, align 8
  store %struct.variant* %7, %struct.variant** %6, align 8
  br label %8

8:                                                ; preds = %28, %2
  %9 = load %struct.variant*, %struct.variant** %6, align 8
  %10 = getelementptr inbounds %struct.variant, %struct.variant* %9, i32 0, i32 2
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %31

13:                                               ; preds = %8
  %14 = load i32, i32* %4, align 4
  %15 = load %struct.variant*, %struct.variant** %6, align 8
  %16 = getelementptr inbounds %struct.variant, %struct.variant* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = icmp eq i32 %14, %17
  br i1 %18, label %19, label %27

19:                                               ; preds = %13
  %20 = load i64, i64* %5, align 8
  %21 = load %struct.variant*, %struct.variant** %6, align 8
  %22 = getelementptr inbounds %struct.variant, %struct.variant* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = icmp eq i64 %20, %23
  br i1 %24, label %25, label %27

25:                                               ; preds = %19
  %26 = load %struct.variant*, %struct.variant** %6, align 8
  store %struct.variant* %26, %struct.variant** %3, align 8
  br label %32

27:                                               ; preds = %19, %13
  br label %28

28:                                               ; preds = %27
  %29 = load %struct.variant*, %struct.variant** %6, align 8
  %30 = getelementptr inbounds %struct.variant, %struct.variant* %29, i32 1
  store %struct.variant* %30, %struct.variant** %6, align 8
  br label %8

31:                                               ; preds = %8
  store %struct.variant* null, %struct.variant** %3, align 8
  br label %32

32:                                               ; preds = %31, %25
  %33 = load %struct.variant*, %struct.variant** %3, align 8
  ret %struct.variant* %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
